--- a/rfc7230.html
+++ b/rfc7230.html
@@ -2896,7 +2896,7 @@ Transfer-Encoding</span></h4>
 </p>
 
 <p lang="ja">
-   理解できない転送コーディングと一緒にリクエストメッセージを受信するサーバーは、501 (Not Implemented)で
+   理解できない転送コーディングを含むリクエストメッセージを受信したサーバーは、501 (Not Implemented)で
 応答<em title="SHOULD">するべきである</em>。
 </p>
 
